	  - Performance improved.
	  - Interfaces of QRinput_getBitStream() and QRinput_mergeBitStream() have
	    been changed.

2012.09.25 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* qrinput.c, tests/qrinput.c:
	  - Reduced the use of dynamic memory allocation.

2012.09.24 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* tests/test_bitstream.c:
	  - Added new test.
	* bitstream.[ch]:
	  - Reduced the use of dynamic memory allocation.

2012.09.22 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* qrenc.c:
	  - Color palette support has been added. Currently PNG and SVG are
	    supported
	* qrencode.1.in:
	  - "--foreground" and "--background" options have been added.

2012.09.19 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* README:
	  - Contributors list has been updated.
	* qrencode.1.in:
	  - Followed Unicode block elements patch.

2012.09.18 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* qrenc.c:
	  - Merge pull request #19 from mezcalero/master (Unicode block elements
	    support).

2012.09.13 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* qrenc.c:
	  - Set XML(SVG) declaration's 'standalone' to 'yes'.

2012.09.03 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* qrenc.c:
	  - A bug introduced in 'b3d5f7' has been reverted. (Thanks to Terry)

2012.09.03 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* qrenc.c:
	  - Integrated David's SVG patch.

2012.04.21 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* qrenc.c:
	  - Incorrect arguments order has been fixed. (Thank to Fred Steinhaeuser)

2012.04.18 Kentaro FUKUCHI <kentaro@fukuchi.org>
	[3.3]
	* qrenc.c:
	  - EPS dot size bug has been fixed (closes: #12).
	* Version 3.3.1 has been released.

2012.04.11 Kentaro FUKUCHI <kentaro@fukuchi.org>
	[master]
	* qrenc.c:
	  - Paper size and margin are now set properly in SVG output.

2012.04.10 Kentaro FUKUCHI <kentaro@fukuchi.org>
	[master]
	* Following fixes have been contributed by Yutaka Niibe.
	* qrencode.1.in:
	  - "Hyphen-used-as-minus-sign" error has been fixed.
	* configure.ac, libqrencode.pc.in, tests/Makefile.am: